Terminamos el apartado del video y hacemos la galeria en html

--- a/index.html
+++ b/index.html
@@ -27,5 +27,21 @@
             </video>
         </div>
     </div>
+
+    <section id="galeria" class="galeria container">
+        <div class="galeria-title">
+            <div class="line" id="lineLeft"></div>
+            <h1>Galeria de Imagenes</h1>
+            <div class="line" id="lineRight"></div>
+        </div>
+
+        <ul class="galeria-imagenes"></ul>
+    </section>
+
+    <script src="/build/scripts/index.js"></script>
+</body>
+
+</html>
+</head>
 </body>
 </html>
