nos centramos en el responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="menu">
             <ul>
                 <li class="menu-element">Inicio</li>
-                <li class="menu-element">Galeria</li>
+                <li class="menu-element">Galería</li>
             </ul>
         </nav>
     </head>
@@ -20,10 +20,11 @@
         <div class="hero-video">
             <div class="hero-title">
                 <h1>RallyMotors</h1>
+                <h3>Rápido Y Furioso</h3>
             </div>
             <video loop muted autoplay play-inline>
-                <source src="/assets/video/video.mp4" type="video/mp4">
-                <source src="/assets/video/video.webm" type="video/wepm">
+                <source src="/build/assets/video/video.mp4" type="video/mp4">
+                <source src="/build/assets/video/video.webm" type="video/wepm">
             </video>
         </div>
     </div>
@@ -31,7 +32,7 @@
     <section id="galeria" class="galeria container">
         <div class="galeria-title">
             <div class="line" id="lineLeft"></div>
-            <h1>Galeria de Imagenes</h1>
+            <h1>Galería de Imágenes</h1>
             <div class="line" id="lineRight"></div>
         </div>
 
