insertamos imagen svg

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <head class="menu-container">
         <nav class="menu">
             <ul>
+                <li class="menu-element"><img src="" alt=""></li>
                 <li class="menu-element">Inicio</li>
                 <li class="menu-element">Galería</li>
             </ul>
